--- a/MoviesLib/Supporting Files/Info.plist
+++ b/MoviesLib/Supporting Files/Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Necessário autorizar o mapa</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Necessário liberar a camêra</string>
+	<string>Necessário autorizar a localização em segundo plano</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Necessário acesso a câmera</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
